entered sales data for first four stores and attempted to modify document objects with js

--- a/salesPage.html
+++ b/salesPage.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" type="text/css" rel="stylesheet" />
-    <script src="app.js"></script>"
     <title>Pat's Cookies Location Sales</title>
 </head>
 <body>
-    
+     
+    <h1>Salmon Cookie Sales By Location</h1>
+    <section id='stores'></section>
+    <script src="app.js"></script>
 </body>
 </html>
