--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pat's Salmon Cookies</title>
     <link href="style.css" type="text/css" rel="stylesheet" />
-    <script src="app.js"></script>
 </head>
 <body>
-    
+    <h1>Pat's Salmon Cookies</h1>
+    <img src='pats-salmon-cookies-logo.png' alt="This is Pat\'s Salmon Cookies Fish Mascot" title="Pat's salmon cookies look like this fish."
+/>    
 </body>
 </html>
