pushed unordered lists into table

--- a/salesPage.html
+++ b/salesPage.html
@@ -11,6 +11,7 @@
      
     <h1>Salmon Cookie Sales By Location</h1>
     <section id='stores'></section>
+    <table id='cookies-table'></table>
     <script src="app.js"></script>
 </body>
 </html>
